# botish

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
botish/: TODO  main.py  settings.py  user.py
botish/__tests/: test1.py  test2.py  test3.py
botish/__tests/seeders/: users.py
botish/bot/: bot.py  dispatcher.py  handlers.py  keyboards.py  limiter.py  states.py  texts.py
botish/calc/: open_interest.py
botish/db/: mongo.py
botish/finance/adapters/: binance.py  interface.py
botish/finance/models/: open_interest.py
botish/scheduler/: calc.py  main.py  tasks.py
botish/tasks/: broker.py  scheduler.py  tasks.py
botish/utils/: dt.py  http.py
