[project]
name = "botish"
version = "0.1.0"
description = ""
authors = [
    {name = "KravecIV",email = "kravesil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "taskiq (>=0.12.1,<0.13.0)",
    "taskiq-redis (>=1.2.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "faker (>=40.4.0,<41.0.0)"
]
